@@ -113,3 +113,10 @@ print(s["type",,])
 
 # Get substructure s(:,2)
 print(s[,,2])
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+# Example of verbose output
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+bs <- readMat(file.path(path, "unsignedByte.mat"), verbose=TRUE)
+
